# CrabMQ

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/:  feature_request.md  bug_report.md  documentation.md
config/: default.toml  logging.toml
examples/: simple_pub.rs  simple_sub.rs
scripts/: build.sh  run.sh
src/: errors.rs  lib.rs  main.rs
src/broker/: dispatcher.rs  mod.rs  persistence.rs  router.rs  session.rs
src/protocol/: decoder.rs  encoder.rs  types.rs
src/security/: auth.rs  mod.rs  tls.rs
src/server/: connection.rs  listener.rs
src/utils/: config_loader.rs  logger.rs  mod.rs  timer.rs
tests/: integration.rs  protocol_tests.rs
